--- a/src/styles/hazbot.css
+++ b/src/styles/hazbot.css
@@ -14,13 +14,13 @@
   --coachmarks-ring-color: #0050c4;
   --coachmarks-focus-color: #0050c4;
   --coachmarks-button-bg: #c1daff;
-  --coachmarks-button-border: #bdbdbd;
+  --coachmarks-button-border: #797979;
   --coachmarks-button-text: #222222;
 }
 
 .coachmarks-popover {
   font-family: Lato, sans-serif;
-  width: 300px;
+  max-width: 500px;
   background-color: var(--coachmarks-popover-bg);
   color: var(--coachmarks-popover-text);
   border: 3px solid var(--coachmarks-popover-border);
@@ -32,26 +32,34 @@
   font-family: Lato, sans-serif;
   font-size: 20px;
   font-weight: 700;
+  padding-right: 0;
   color: var(--coachmarks-popover-text);
+}
+
+.coachmarks-popover-close-btn {
+  display: none;
 }
 
 .coachmarks-popover-description {
   font-family: Lato, sans-serif;
   font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
+  font-weight: normal;
+  line-height: 1.5;
+  margin: 0 0 10px;
   color: var(--coachmarks-popover-text);
 }
 
-.coachmarks-popover-buttons {
-  justify-content: flex-end;
+.coachmarks-popover-description:first-child {
+  padding-right: 0;
 }
 
 .coachmarks-popover-prev-btn,
 .coachmarks-popover-next-btn {
   font-family: Lato, sans-serif;
   font-size: 16px;
-  font-weight: 700;
+  font-weight: bold;
+  line-height: normal;
+  text-align: center;
   background-color: var(--coachmarks-button-bg);
   color: var(--coachmarks-button-text);
   border: 1px solid var(--coachmarks-button-border);
